--- a/Milestone 1/docker-compose.yml
+++ b/Milestone 1/docker-compose.yml
@@ -1,25 +1,84 @@
-  
 services:
+  haproxy:
+    image: haproxy:3.0-alpine
+    container_name: haproxy-m1-dm
+    ports:
+      - 8085:80
+      - 8443:443
+    volumes:
+      - ./haproxy/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
+      - certs:/etc/haproxy/certs:ro
+      - acme_challenge:/var/www/html/.well-known/acme-challenge:ro
+    depends_on:
+      - apache
+      # - lego
+    restart: always
+
   apache:
     build:
       context: ./webserver
       dockerfile: Dockerfile
     depends_on:
       - mysql
-    ports:
-      - 8080:80
-    container_name: contapa2-m1-dm
+    environment:
+      MYSQL_HOST: contsql-m1-dm
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+    deploy:
+      replicas: 3
+    healthcheck:
+      test: ["CMD", "curl", "-f", "-s", "http://localhost/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+
   mysql:
     image: mysql:lts@sha256:5367102acfefeaa47eb0eb57c8d4f8b96c8c14004859131eac9bbfaa62f81e34
     container_name: contsql-m1-dm
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: appdb
-      MYSQL_USER: appuser
-      MYSQL_PASSWORD: secret
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     volumes:
       - db_data:/var/lib/mysql
+      - ./webserver/init.sql:/docker-entrypoint-initdb.d/init.sql
+
+  phpmyadmin:
+    image: phpmyadmin:latest
+    container_name: phpmyadmin-m1-dm
+    restart: always
+    ports:
+      - 8086:80
+    environment:
+      PMA_HOST: mysql
+      PMA_PORT: 3306
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+    depends_on:
+      - mysql
+
+  # lego:
+  #   image: docker:27-dind-alpine3.20
+  #   container_name: lego-acme-m1-dm
+  #   privileged: true
+  #   restart: always
+  #   environment:
+  #     - DOMAIN=${DOMAIN}
+  #     - EMAIL=${EMAIL}
+  #     - ACME_SERVER=${ACME_SERVER}
+  #   volumes:
+  #     - /var/run/docker.sock:/var/run/docker.sock
+  #     - certs:/etc/lego/certificates
+  #     - acme_challenge:/var/www/html/.well-known/acme-challenge
+  #     - ./lego/renew.sh:/etc/periodic/daily/renew-certs:ro
+  #     - ./lego/entrypoint.sh:/entrypoint.sh:ro
+  #   entrypoint: ["/entrypoint.sh"]
+  #   command: ["crond", "-f", "-l", "2"]
 
 volumes:
   db_data:
+  certs:
+  acme_challenge:
