--- a/Milestone 1/haproxy/haproxy.cfg
+++ b/Milestone 1/haproxy/haproxy.cfg
@@ -27,9 +27,7 @@ frontend http_front
 backend http_back
     balance roundrobin
     option httpchk GET /
-    server web1 contapa2-m1-dm-1:80 check
-    server web2 contapa2-m1-dm-2:80 check
-    server web3 contapa2-m1-dm-3:80 check
+    server-template web 3 contapa2-m1-dm:80 check
 
 backend acme_challenge
     server acme_local 127.0.0.1:8888
