--- a/Milestone 1/haproxy/haproxy.cfg
+++ b/Milestone 1/haproxy/haproxy.cfg
@@ -27,7 +27,9 @@ frontend http_front
 backend http_back
     balance roundrobin
     option httpchk GET /
-    server-template web 3 contapa2-m1-dm:80 check
+    server web1 milestone1-contapa2-m1-dm-1:80 check
+    server web2 milestone1-contapa2-m1-dm-2:80 check
+    server web3 milestone1-contapa2-m1-dm-3:80 check
 
 backend acme_challenge
     server acme_local 127.0.0.1:8888
