--- a/Milestone 1/docker-compose.yml
+++ b/Milestone 1/docker-compose.yml
@@ -87,8 +87,8 @@ services:
       - certs:/etc/lego/certificates
       - acme_challenge:/var/www/html/.well-known/acme-challenge
       - ./lego/renew.sh:/etc/periodic/daily/renew-certs:ro
-      - ./lego/entrypoint.sh:/entrypoint.sh:ro
-    entrypoint: ["/entrypoint.sh"]
+      - ./lego/entrypoint.sh:/entrypoint.sh
+    entrypoint: ["/bin/sh", "/entrypoint.sh"]
     command: ["crond", "-f", "-l", "2"]
 
 volumes:
