--- a/Milestone 1/haproxy/haproxy.cfg
+++ b/Milestone 1/haproxy/haproxy.cfg
@@ -15,9 +15,8 @@ frontend http_front
     bind *:80
     # bind *:443 ssl crt /etc/haproxy/certs/ alpn h2,http/1.1
     
-    # ACME challenge handling
-    acl is_acme_challenge path_beg /.well-known/acme-challenge/
-    use_backend acme_challenge if is_acme_challenge
+    # ACME challenge handling - forward to web servers
+    # acl is_acme_challenge path_beg /.well-known/acme-challenge/
     
     # Redirect HTTP to HTTPS (except ACME challenges)
     # http-request redirect scheme https unless { ssl_fc } || is_acme_challenge
@@ -30,6 +29,3 @@ backend http_back
     server web1 milestone1-contapa2-m1-dm-1:80 check
     server web2 milestone1-contapa2-m1-dm-2:80 check
     server web3 milestone1-contapa2-m1-dm-3:80 check
-
-backend acme_challenge
-    server acme_local 127.0.0.1:8888
