--- a/Milestone 1/docker-compose.yml
+++ b/Milestone 1/docker-compose.yml
@@ -5,10 +5,14 @@ services:
     ports:
       - 80:80
       - 443:443
+    environment:
+      - DOMAIN=${DOMAIN}
     volumes:
-      - ./haproxy/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
+      - ./haproxy/haproxy.cfg.template:/usr/local/etc/haproxy/haproxy.cfg.template:ro
+      - ./haproxy/haproxy-entrypoint.sh:/haproxy-entrypoint.sh:ro
       - certs:/etc/haproxy/certs:ro
       - acme_challenge:/var/www/html/.well-known/acme-challenge:ro
+    entrypoint: ["/bin/sh", "/haproxy-entrypoint.sh"]
     depends_on:
       contapa2-m1-dm:
         condition: service_healthy
