--- a/Milestone 1/docker-compose.yml
+++ b/Milestone 1/docker-compose.yml
@@ -8,10 +8,10 @@ services:
     environment:
       - DOMAIN=${DOMAIN}
     volumes:
-      - ./haproxy/haproxy.cfg.template:/usr/local/etc/haproxy/haproxy.cfg.template:ro
-      - ./haproxy/haproxy-entrypoint.sh:/haproxy-entrypoint.sh:ro
       - certs:/etc/haproxy/certs:ro
       - acme_challenge:/var/www/html/.well-known/acme-challenge:ro
+      - ./haproxy/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
+      - ./haproxy/haproxy-entrypoint.sh:/haproxy-entrypoint.sh:ro
     entrypoint: ["/bin/sh", "/haproxy-entrypoint.sh"]
     depends_on:
       contapa2-m1-dm:
