--- a/Milestone 1/haproxy/haproxy.cfg
+++ b/Milestone 1/haproxy/haproxy.cfg
@@ -13,7 +13,7 @@ defaults
 
 frontend http_front
     bind *:80
-    bind "*:443 ssl crt /etc/haproxy/certs/${DOMAIN}.pem alpn h2,http/1.1"
+    bind *:443 ssl crt "/etc/haproxy/certs/${DOMAIN}.pem" alpn h2,http/1.1
     
     # ACME challenge handling - forward to web servers
     acl is_acme_challenge path_beg /.well-known/acme-challenge/
