--- a/Milestone 1/haproxy/haproxy.cfg
+++ b/Milestone 1/haproxy/haproxy.cfg
@@ -13,13 +13,13 @@ defaults
 
 frontend http_front
     bind *:80
-    bind *:443 ssl crt "/etc/haproxy/certs/${DOMAIN}.pem" alpn h2,http/1.1
+    bind *:443 ssl crt "/etc/haproxy/certs/${DOMAIN}.pem" alpn h2,http/1.1 strict-sni
     
     # ACME challenge handling - forward to web servers
     acl is_acme_challenge path_beg /.well-known/acme-challenge/
     
     # Redirect HTTP to HTTPS (except ACME challenges)
-    http-request redirect scheme https unless { ssl_fc } || is_acme_challenge
+    http-request redirect scheme https code 301 if !{ ssl_fc } !is_acme_challenge
     
     default_backend http_back
 
