--- a/Milestone 1/haproxy/haproxy.cfg
+++ b/Milestone 1/haproxy/haproxy.cfg
@@ -15,8 +15,9 @@ frontend http_front
     bind *:80
     bind *:443 ssl crt "/etc/haproxy/certs/${DOMAIN}.pem" alpn h2,http/1.1 strict-sni
     
-    # ACME challenge handling - forward to web servers
+    # ACME challenge handling - forward to lego container
     acl is_acme_challenge path_beg /.well-known/acme-challenge/
+    use_backend lego_back if is_acme_challenge
     
     # Redirect HTTP to HTTPS (except ACME challenges)
     http-request redirect scheme https code 301 if !{ ssl_fc } !is_acme_challenge
@@ -29,3 +30,10 @@ backend http_back
     server web1 milestone1-contapa2-m1-dm-1:80 check
     server web2 milestone1-contapa2-m1-dm-2:80 check
     server web3 milestone1-contapa2-m1-dm-3:80 check
+
+backend lego_back
+    # Forward ACME challenges to lego's built-in HTTP server
+    # Note: This will connect to whichever lego container is running (init or renew)
+    server lego lego-init-m1-dm:80 check inter 1s fall 2 rise 1
+    # Fallback servers for renewal containers (will be auto-discovered by name pattern)
+    server-template lego-renew 5 lego-renew:80 check inter 1s fall 2 rise 1 disabled
