--- a/Milestone 1/haproxy/haproxy.cfg
+++ b/Milestone 1/haproxy/haproxy.cfg
@@ -17,10 +17,12 @@ frontend http_front
     
     # ACME challenge handling - forward to lego container
     acl is_acme_challenge path_beg /.well-known/acme-challenge/
-    use_backend lego_back if is_acme_challenge
     
-    # Redirect HTTP to HTTPS (except ACME challenges)
+    # Redirect HTTP to HTTPS (except ACME challenges) - must come before use_backend
     http-request redirect scheme https code 301 if !{ ssl_fc } !is_acme_challenge
+    
+    # Route ACME challenges to lego
+    use_backend lego_back if is_acme_challenge
     
     default_backend http_back
 
@@ -33,7 +35,6 @@ backend http_back
 
 backend lego_back
     # Forward ACME challenges to lego's built-in HTTP server
-    # Note: This will connect to whichever lego container is running (init or renew)
-    server lego lego-init-m1-dm:80 check inter 1s fall 2 rise 1
-    # Fallback servers for renewal containers (will be auto-discovered by name pattern)
-    server-template lego-renew 5 lego-renew:80 check inter 1s fall 2 rise 1 disabled
+    # Will route to either lego-init or lego-renew-temp container
+    server lego-init lego-init-m1-dm:80
+    server lego-renew lego-renew-temp:80 backup
