--- a/Milestone 1/haproxy/haproxy.cfg
+++ b/Milestone 1/haproxy/haproxy.cfg
@@ -36,6 +36,6 @@ backend http_back
 backend lego_back
     # Forward ACME challenges to lego's built-in HTTP server
     # Will route to either lego-init or lego-renew-temp container
-    # Use backup flag and no check to prevent startup failures
-    server lego-init lego-init-m1-dm:80 check inter 2s fall 3 rise 2
-    server lego-renew lego-renew-temp:80 check inter 2s fall 3 rise 2 backup
+    # Use init-addr to prevent resolution failure on startup
+    server lego-init lego-init-m1-dm:80 check inter 2s fall 3 rise 2 init-addr none
+    server lego-renew lego-renew-temp:80 check inter 2s fall 3 rise 2 backup init-addr none
