--- a/Milestone 1/docker-compose.yml
+++ b/Milestone 1/docker-compose.yml
@@ -15,7 +15,7 @@ services:
         condition: service_healthy
     restart: always
     healthcheck:
-      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:80 || exit 1"]
+      test: ["CMD-SHELL", "pidof haproxy || exit 1"]
       interval: 5s
       timeout: 3s
       retries: 3
