--- a/Milestone 1/haproxy/haproxy.cfg
+++ b/Milestone 1/haproxy/haproxy.cfg
@@ -2,6 +2,12 @@ global
     log stdout format raw local0
     maxconn 4096
 
+resolvers docker_resolver
+    nameserver dns 127.0.0.11:53
+    resolve_retries 3
+    timeout resolve 1s
+    timeout retry 1s
+
 defaults
     log     global
     mode    http
@@ -36,6 +42,6 @@ backend http_back
 backend lego_back
     # Forward ACME challenges to lego's built-in HTTP server
     # Will route to either lego-init or lego-renew-temp container
-    # Use init-addr to prevent resolution failure on startup
-    server lego-init lego-init-m1-dm:80 check inter 2s fall 3 rise 2 init-addr none
-    server lego-renew lego-renew-temp:80 check inter 2s fall 3 rise 2 backup init-addr none
+    # Use init-addr and resolvers to allow dynamic resolution
+    server lego-init lego-init-m1-dm:80 check inter 2s fall 3 rise 2 init-addr none resolvers docker_resolver resolve-prefer ipv4
+    server lego-renew lego-renew-temp:80 check inter 2s fall 3 rise 2 backup init-addr none resolvers docker_resolver resolve-prefer ipv4
