--- a/Milestone 1/haproxy/haproxy.cfg
+++ b/Milestone 1/haproxy/haproxy.cfg
@@ -42,6 +42,6 @@ backend http_back
 backend lego_back
     # Forward ACME challenges to lego's built-in HTTP server
     # Will route to either lego-init or lego-renew-temp container
-    # Use init-addr and resolvers to allow dynamic resolution
-    server lego-init lego-init-m1-dm:80 check inter 2s fall 3 rise 2 init-addr none resolvers docker_resolver resolve-prefer ipv4
-    server lego-renew lego-renew-temp:80 check inter 2s fall 3 rise 2 backup init-addr none resolvers docker_resolver resolve-prefer ipv4
+    # No health checks - just try to connect when needed
+    server lego-init lego-init-m1-dm:80 init-addr none resolvers docker_resolver resolve-prefer ipv4
+    server lego-renew lego-renew-temp:80 backup init-addr none resolvers docker_resolver resolve-prefer ipv4
