--- a/Milestone 1/lego/ofelia-config.ini
+++ b/Milestone 1/lego/ofelia-config.ini
@@ -1,3 +1,4 @@
-[job-local "lego-renew"]
+[job-exec "lego-renew"]
 schedule = @every 1m
-command = docker start lego-init-m1-dm
+container = lego-init-m1-dm
+command = sh -c "LEGO_MODE=renew LEGO_ARGS='--days 30' /lego-wrapper.sh"
