--- a/Milestone 1/haproxy/haproxy.cfg
+++ b/Milestone 1/haproxy/haproxy.cfg
@@ -41,5 +41,6 @@ backend http_back
 
 backend lego_back
     # Forward ACME challenges to lego's built-in HTTP server
-    # Only need lego-init since we restart it for renewals
+    # Routes to either lego-init or lego-renew-temp container
     server lego-init lego-init-m1-dm:80 init-addr none resolvers docker_resolver resolve-prefer ipv4
+    server lego-renew lego-renew-temp:80 backup init-addr none resolvers docker_resolver resolve-prefer ipv4
