--- a/Milestone 1/lego/ofelia-config.ini
+++ b/Milestone 1/lego/ofelia-config.ini
@@ -1,4 +1,8 @@
-[job-exec "lego-renew"]
+[job-run "lego-renew"]
 schedule = @every 1m
-container = lego-init-m1-dm
-command = sh -c "LEGO_MODE=renew LEGO_ARGS='--days 30' /lego-wrapper.sh"
+image = goacme/lego:latest
+network = milestone-1_default
+volume = milestone-1_certs:/etc/lego/certificates
+name = lego-renew-temp
+delete = true
+command = --email=${EMAIL} --domains=${DOMAIN} --http --http.port=:80 --path=/etc/lego --server=${ACME_SERVER} --accept-tos renew --days 30
