--- a/Milestone 1/lego/ofelia-config.ini
+++ b/Milestone 1/lego/ofelia-config.ini
@@ -5,4 +5,7 @@ network = milestone-1_default
 volume = milestone-1_certs:/etc/lego/certificates
 name = lego-renew-temp
 delete = true
+environment = EMAIL=${EMAIL}
+environment = DOMAIN=${DOMAIN}
+environment = ACME_SERVER=${ACME_SERVER}
 command = --email=${EMAIL} --domains=${DOMAIN} --http --http.port=:80 --path=/etc/lego --server=${ACME_SERVER} --accept-tos renew --days 30
