--- a/Milestone 1/lego/ofelia-config.ini
+++ b/Milestone 1/lego/ofelia-config.ini
@@ -1,11 +1,3 @@
-[job-run "lego-renew"]
+[job-local "lego-renew"]
 schedule = @every 1m
-image = goacme/lego:latest
-network = milestone-1_default
-volume = milestone-1_certs:/etc/lego/certificates
-name = lego-renew-temp
-delete = true
-environment = EMAIL=${EMAIL}
-environment = DOMAIN=${DOMAIN}
-environment = ACME_SERVER=${ACME_SERVER}
-command = --email=${EMAIL} --domains=${DOMAIN} --http --http.port=:80 --path=/etc/lego --server=${ACME_SERVER} --accept-tos renew --days 30
+command = docker run --rm --network milestone-1_default -v milestone-1_certs:/etc/lego/certificates --name lego-renew-temp goacme/lego:latest --email=$EMAIL --domains=$DOMAIN --http --http.port=:80 --path=/etc/lego --server=$ACME_SERVER --accept-tos renew --days 30
