--- a/Milestone 1/docker-compose.yml
+++ b/Milestone 1/docker-compose.yml
@@ -98,7 +98,9 @@ services:
       - run
 
   ofelia:
-    image: mcuadros/ofelia:latest
+    build:
+      context: ./lego
+      dockerfile: Dockerfile.ofelia
     container_name: ofelia-cron-m1-dm
     restart: always
     environment:
