--- a/Milestone 1/lego/ofelia-config.ini
+++ b/Milestone 1/lego/ofelia-config.ini
@@ -1,3 +1,3 @@
 [job-local "lego-renew"]
 schedule = @every 1m
-command = docker run --network milestone-1_default -v milestone-1_certs:/etc/lego/certificates --name lego-renew-temp goacme/lego:latest --email=$EMAIL --domains=$DOMAIN --http --http.port=:80 --path=/etc/lego --server=$ACME_SERVER --accept-tos renew --days 30
+command = docker run --rm --network milestone-1_default -v milestone-1_certs:/etc/lego/certificates --name lego-renew-temp goacme/lego:latest --email=$EMAIL --domains=$DOMAIN --http --http.port=:80 --path=/etc/lego --server=$ACME_SERVER --accept-tos renew --days 30
