--- a/Milestone 1/lego/ofelia-config.ini
+++ b/Milestone 1/lego/ofelia-config.ini
@@ -1,3 +1,8 @@
-[job-local "lego-renew"]
+[job-run "lego-renew"]
 schedule = @every 1m
-command = docker run --rm --network milestone-1_default -v milestone-1_certs:/etc/lego/certificates --name lego-renew-temp goacme/lego:latest --email=$EMAIL --domains=$DOMAIN --http --http.port=:80 --path=/etc/lego --server=$ACME_SERVER --accept-tos renew --days 30
+image = goacme/lego:latest
+network = milestone1_default
+volume = milestone1_certs:/etc/lego
+name = lego-renew-temp
+delete = true
+command = --email=maatdavid@yahoo.com --domains=testing.davidmaat.be --http --http.port=:80 --path=/etc/lego --server=https://acme-staging-v02.api.letsencrypt.org/directory --accept-tos renew --days 30
